[package]
name = "ed25519-proj"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
env_logger = "0"
rand = "0.7.0"
signature_module = {path = "signature_module"}

[dependencies.clap]
version = "~2.27.0"
default-features = false
features = ["yaml"]

[dependencies.ed25519-dalek]
version = "1"
